# MELODIES-MONET

./: .pre-commit-config.yaml  cleanup_requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
ci/: check-for-license-header.py
docs/: api.rst  conf.py  environment-docs.yml  index.rst
docs/appendix/: machine-specific-install.rst  troubleshooting.rst  yaml.rst
docs/applications/: forecasts.rst  other_tools.rst  publications.rst
docs/develop/: contribute.rst  datasets.rst  developers_guide.rst  development_team.rst
docs/examples/: AEROMMA_UFS-AQM_Plots.ipynb  aircraft_pairing.rst  airnow_camchem_se.ipynb  airnow_wrfchem_reg.ipynb  camchem.ipynb  control_camchem.yaml  control_camchem_se.yaml  control_read_looped_aircraft_AEROMMA_UFS_AQM.yaml  control_ufsaqm_ozonesonde.yaml  control_wrfchem_mech-0905_2.yaml  control_wrfchem_mech-0905_2_reg.yaml  control_wrfchem_saveandread.yaml  idealized.ipynb  intro_examples.rst  read_paired_data.ipynb  save_paired_data.ipynb
docs/getting_started/: downloading_obs.rst  how_to_run.rst  installation.rst  new_to_python.rst  software_architecture.rst  tutorials.rst
docs/users_guide/: description.rst  gridded_datasets.rst  introduction.rst  region_selection.rst  supported_datasets.rst  supported_diagnostics.rst  supported_plots.rst  supported_stats.rst  time_chunking.rst
examples/forecast_evaluation/: Monet-analysis-example-plots-wrf-rapchemtest.py  Monet-analysis-example-plots-wrf-rapchemtest_aeronet.py  daily.monet-eval_sites.sh  folium_site_map_aeronet.py  folium_site_map_airnow.py  reformat_aeronet_rapchemtest.py  reformat_airnow_rapchemtest.py  site_analysis_aeronet.py  site_analysis_airnow.py
melodies_monet/: __init__.py  _cli.py  driver.py  tutorial.py
scripts/: subsetter.py
(+132 files in other folders)
