[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melodies-monet"
dynamic = ["version"]
description = "MELODIES MONET unified verification package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache 2.0"}
authors = [
    {name = "Rebecca Schwantes", email = "rebecca.schwantes@noaa.gov"}
]
maintainers = [
    {name = "Rebecca Schwantes", email = "rebecca.schwantes@noaa.gov"}
]
keywords = ["model", "verification", "air-quality", "atmosphere", "evaluation"]
dependencies = [
    "cartopy",
    "matplotlib",
    "monet",
    "monetio",
    "monet-stats @ git+https://github.com/noaa-oar-arl/monet-stats.git",
    "netCDF4",
    "numpy",
    "pandas<2.0.0",
    "pyyaml",
    "seaborn",
    "statsmodels",
    "xarray",
    "dask",
    "typer",
    "pooch",
    "pyarrow",
    "numba",
    "timezonefinder",
    "h5py",
    "h5netcdf",
    "lxml",
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
all = [
    "melodies-monet",
]

[project.urls]
Homepage = "https://github.com/NCAR/MELODIES-MONET"

[project.scripts]
melodies-monet = "melodies_monet._cli:cli"

[tool.setuptools]
packages = ["melodies_monet"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "melodies_monet.__version__"}

[tool.setuptools.package-data]
"*" = ["data/*.csv", "data/*.tsv", "data/*.txt", "data/*.png"]

[tool.black]
line-length = 132

[tool.isort]
known_first_party = "melodies_monet"
profile = "black"
line_length = 132

[tool.ruff]
line-length = 132
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]
